# atf_form_index

./: .gitignore  classifier.py  document_pipeline.py  label_map.pkl  page_sampling_pipeline.py  predict_form.py  pyproject.toml  readme.txt  requirements.txt  search_index.json  serial_extract.py  test_classifier_evaluation.py  train.py  webapp.py
Datasets/: dataset_errors_1.json  dataset_errors_2.json  dataset_no_errors_1.json  dataset_no_errors_2.json  test_dataset_500.json
TestData1/: 0337-4030.json  041EU6605.json  0999441.json  10E70721.json  13A08132.json  158VM5869.json  15G36455.json  15N10608.json  164910064.json  2472066.json  254T427354.json  2567076.json  2970-6550.json  375KN0808.json  408JN0394.json  434503326.json  441VA7153.json  548FE2326.json  5776347.json  743007379.json  862UC1503.json  970R41791.json  97D6980.json  9879-2690.json  AC5621786.json  AGLN150.json  CEX46976.json  EXPW361.json  GD859165.json  GFZL350.json  J-3252.json  JMGV781.json  JZN8010TRL.json  K2Y0F0R7K0.json  L-2694.json  M7F8B6.json  MD-37681.json  P19TEW7LWB.json  PJR-2717.json  RH5787709.json  (+10 more)
TestData2/: 025CE2234.json  064FD2576.json  07402371.json  09Z0882.json  0D3M0L5EL34.json  100UU6551.json  1636-1445.json  16W65321.json  1792729.json  19S20112.json  20G48825.json  23E02907.json  24G20149.json  359344866.json  3784-3262.json  38L8BCKJRZNV.json  486S516987.json  673J6116.json  806YH1789.json  8777X19395.json  9452N264201.json  9479-3836.json  9971Z2529.json  B02594131.json  BJM21497.json  BP0152.json  C56381560.json  D2Z1J7H4R5.json  F19FKXHNHJ.json  FZNA97B4X8N.json  (+20 more)
(+118 files in other folders)
